--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
    <nav class="navbar">
 
-      <a href="#" class="logo"> <img src="D:\accesssolutions1.png">
+      <a href="#" class="logo"> <img src="accesssolutions1.png">
 
       <div class="links">
          <a href="#home">home</a>
